--- a/src/views/fragments/splash-view.html
+++ b/src/views/fragments/splash-view.html
@@ -1,4 +1,3 @@
-<link rel="import" href="../../../bower_components/shadycss/apply-shim.html">
 <link rel="import" href="../../../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 
@@ -7,6 +6,7 @@
     <style>
       :host {
         align-items: center;
+        background: white;
         display: flex;
         height: 100%;
         justify-content: center;
