[test-pwa-add] added basic fragment management

--- a/src/fragments/main-fragment.html
+++ b/src/fragments/main-fragment.html
@@ -21,6 +21,14 @@
       static get is() {
         return 'main-fragment';
       }
+
+      onVisible() {
+        console.log('onVisible()');
+      }
+
+      onInvisible() {
+        console.log('onInvisible()');
+      }
     }
 
     window.customElements.define(MainFragment.is, MainFragment);
