--- a/src/fragments/main-fragment.html
+++ b/src/fragments/main-fragment.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../core/services/five-hundred-px-service.html">
 <link rel="import" href="../core/storages/five-hundred-px-storage.html">
 <link rel="import" href="../views/fragments/main-view.html">
 
@@ -12,8 +13,8 @@
       }
     </style>
 
-    <five-hundred-px-storage items="{{items}}"></five-hundred-px-storage>
-    <main-view images="[[items]]"></main-view>
+    <five-hundred-px-storage id="storage" items="{{items}}"></five-hundred-px-storage>
+    <main-view id="view" images="[[items]]"></main-view>
   </template>
 
   <script>
@@ -22,8 +23,17 @@
         return 'main-fragment';
       }
 
+      ready() {
+        super.ready();
+        this.service = new FiveHundredPxService();
+      }
+
       onVisible() {
         console.log('onVisible()');
+
+        this.service.fetch().then(photos => {
+          this.$.storage.items = photos.map(item => item.image_url);
+        });
       }
 
       onInvisible() {
