--- a/src/views/fragments/main-view.html
+++ b/src/views/fragments/main-view.html
@@ -43,7 +43,7 @@
       }
     </style>
 
-    <h1>#mountains from 500px</h1>
+    <h1>#colors from 500px</h1>
 
     <image-list-view items="[[images]]"></image-list-view>
   </template>
