--- a/src/views/fragments/main-view.html
+++ b/src/views/fragments/main-view.html
@@ -1,21 +1,24 @@
 <link rel="import" href="../../../bower_components/shadycss/apply-shim.html">
 <link rel="import" href="../../../bower_components/paper-styles/shadow.html">
-<link rel="import" href="../../../bower_components/paper-styles/typography.html">
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="../image-list-view.html">
 
 <dom-module id="main-view">
   <template>
     <style>
       :host {
+        background: #eeeeee;
+        display: block;
+        height: 100%;
+        overflow: auto;
+        width: 100%;
+      }
+
+      #content {
         @apply --shadow-elevation-2dp;
 
-        background: white;
-        display: block;
         height: 100%;
         margin: auto;
         max-width: 960px;
-        overflow: auto;
       }
 
       @media (min-width: 1025px) {
@@ -29,23 +32,11 @@
         :host::-webkit-scrollbar-track {
         }
       }
-
-      h1 {
-        @apply --paper-font-display2;
-
-        line-height: 1em;
-        margin: 0;
-        padding: 1em;
-        text-align: center;
-      }
-      image-list-view {
-        width: 100%;
-      }
     </style>
 
-    <h1>#colors from 500px</h1>
-
-    <image-list-view items="[[images]]"></image-list-view>
+    <div id="content">
+      <slot></slot>
+    </div>
   </template>
 
   <script>
