--- a/src/views/fragments/image-details-view.html
+++ b/src/views/fragments/image-details-view.html
@@ -15,6 +15,7 @@
       :host {
         @apply --paper-font-common-base;
 
+        background: white;
         display: block;
         height: 100%;
         width: 100%;
@@ -38,6 +39,7 @@
       app-toolbar {
         --paper-icon-button-ink-color: white;
 
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.4), transparent);
         color: white;
         height: 64px;
       }
