--- a/src/views/fragments/image-details-view.html
+++ b/src/views/fragments/image-details-view.html
@@ -33,9 +33,6 @@
         background-color: white;
         height: 50%;
       }
-      app-header-layout > div {
-        padding: 24px;
-      }
       app-toolbar {
         --paper-icon-button-ink-color: white;
 
@@ -43,9 +40,9 @@
         color: white;
         height: 64px;
       }
-      app-toolbar > [main-title] {
+      div[main-title] {
         font-size: 1.4rem;
-        margin-left: 16px;
+        margin-left: 1rem;
       }
 
       .col {
@@ -70,6 +67,10 @@
         display: flex;
         flex-direction: row;
       }
+
+      #content {
+        padding: 1.5rem;
+      }
     </style>
 
     <app-header-layout>
@@ -81,7 +82,7 @@
         </app-toolbar>
       </app-header>
 
-      <div>
+      <div id="content">
         <div class="row">
           <div class="col">Author</div>
           <div class="col">
