--- a/src/fragments/image-details-fragment.html
+++ b/src/fragments/image-details-fragment.html
@@ -1,4 +1,3 @@
-<link rel="import" href="../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../views/fragments/image-details-view.html">
 
@@ -16,7 +15,7 @@
   </template>
 
   <script>
-    class ImageDetailsFragment extends Polymer.GestureEventListeners(Polymer.Element) {
+    class ImageDetailsFragment extends Polymer.Element {
       static get is() {
         return 'image-details-fragment';
       }
@@ -37,7 +36,7 @@
       ready() {
         super.ready();
 
-        Polymer.Gestures.addListener(this, 'tap', (event) => {
+        this.addEventListener('click', (event) => {
           const composedPath = event.composedPath();
 
           if ((composedPath[0].nodeName.toLowerCase() != 'paper-icon-button') && (composedPath[0].nodeName.toLowerCase() != 'iron-icon'))
