Set _blank links' rel attr to 'noopener, noreferrer'

--- a/src/views/fragments/image-details-view.html
+++ b/src/views/fragments/image-details-view.html
@@ -87,7 +87,7 @@
           <div class="col">Author</div>
           <div class="col">
             [[image.user.firstname]] [[image.user.lastname]]
-            (<a href="https://500px.com/[[image.user.username]]" target="_blank">@[[image.user.username]]</a>)
+            (<a href="https://500px.com/[[image.user.username]]" rel="noopener, noreferrer" target="_blank">@[[image.user.username]]</a>)
           </div>
         </div>
       </div>
