[five-hundred-px-service] now updates the storage's items automatically

--- a/src/fragments/home-fragment.html
+++ b/src/fragments/home-fragment.html
@@ -14,7 +14,7 @@
     </style>
 
     <five-hundred-px-service id="service"></five-hundred-px-service>
-    <five-hundred-px-storage id="storage" items="{{items}}"></five-hundred-px-storage>
+    <five-hundred-px-storage items="{{items}}"></five-hundred-px-storage>
     <home-view id="view" images="[[items]]"></home-view>
   </template>
 
@@ -25,9 +25,7 @@
       }
 
       onVisible() {
-        this.$.service.fetch().then(photos => {
-          this.$.storage.items = photos;
-        });
+        this.$.service.fetch();
       }
 
       ready() {
