App can now be launched to a direct URL like 'photos/123'

--- a/src/fragments/main-fragment.html
+++ b/src/fragments/main-fragment.html
@@ -99,7 +99,7 @@
       }
 
       onVisible() {
-        this.setPath('');
+        this.setPath(this.$.location.path.slice(this.basePath.length));
       }
 
       ready() {
