--- a/src/fragments/splash-fragment.html
+++ b/src/fragments/splash-fragment.html
@@ -22,9 +22,12 @@
         return 'splash-fragment';
       }
 
+      onVisible() {
+        this.$.service.fetch().then(() => this.frame.setVisibleFragmentByTag('main-fragment'));
+      }
+
       ready() {
         super.ready();
-        this.$.service.fetch().then(() => this.frame.setVisibleFragmentByTag('main-fragment'));
       }
     }
 
